Fix misalignments

--- a/app/assets/stylesheets/partials/prologue.sass
+++ b/app/assets/stylesheets/partials/prologue.sass
@@ -23,6 +23,9 @@ section#prologue
       a, img
         +size(auto 100%)
 
+      h1
+        color: $color-dark-grey
+
   +name('splash')
     +align()
     +size(100%)
